--- a/lettucescan/cl/CMakeLists.txt
+++ b/lettucescan/cl/CMakeLists.txt
@@ -9,7 +9,8 @@ cmake_minimum_required(VERSION 2.8.11)
 find_package(pybind11 REQUIRED)
 find_package(OpenCL REQUIRED)
 
-pybind11_add_module(space_carving SHARED bindings.cc SpaceCarving.cc)
-target_link_libraries(space_carving ${OpenCL_LIBRARY})
-target_include_directories(space_carving PUBLIC ${OpenCL_INCLUDE_DIRS})
+
+pybind11_add_module(cl SHARED bindings.cc SpaceCarving.cc cl.cc FMM.cc)
+target_link_libraries(cl ${OpenCL_LIBRARY})
+target_include_directories(cl PUBLIC ${OpenCL_INCLUDE_DIRS})
 
