--- a/default/pipeline.toml
+++ b/default/pipeline.toml
@@ -40,5 +40,5 @@ n_img = 100
 max_image_size = 1500
 max_pcd_size = 10000
 thumbnail_size = 150
-
 pcd_source = "space_carving"
+mesh_source = "delaunay"
