--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 
 # C extensions
 *.so
+*.dll
+*.dylib
 
 # Distribution / packaging
 .Python
@@ -114,3 +116,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# CMake:
+*.cmake
+*.tcl
+CMakeCache.txt
+CMakeFiles/
