Fixed v0.4 conda environment requirements

--- a/conda_recipe/scan3d_0.4-linux.yaml
+++ b/conda_recipe/scan3d_0.4-linux.yaml
@@ -21,5 +21,6 @@ dependencies:
 - aniso8601  # conda-forge channel
 - pocl  # conda-forge channel
 - pyopencl  # conda-forge channel
-- cgal  # conda-forge channel
+#- cgal  # conda-forge channel
 - open3d  # open3d-admin channel
+- luigi
