--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ decorator==4.4.1
 defusedxml==0.6.0
 docutils==0.15.2
 entrypoints==0.3
+Flask==1.1.1
+Flask-Cors==3.0.8
+Flask-RESTful==0.3.7
 imageio==2.6.1
 ipykernel==5.1.3
 ipython==7.10.2
