config for virtual scan

--- a/default/segmentation2d.toml
+++ b/default/segmentation2d.toml
@@ -1,7 +1,3 @@
-[Colmap]
-matcher = "exhaustive"
-compute_dense = false
-
 [accessory]
 calibration_scan_id = "calib_scan_shortpath"
 
@@ -12,12 +8,16 @@ binarize = true
 threshold = 0.0
 
 [Segmentation2D]
-Sx = 896
-Sy = 896
+upstream_task="Scan"
+Sx = 256
+Sy = 256
 N_vox = 1000000
-model_segmentation_name = "table1_test5_hdri_arabidopsis_resnet50_epoch15_rotate_True_finetune_3_epoch50.pt"
+label_names="background,class_0,class_1,class_2"
+model_segmentation_name = "resnet18_256_256_epoch100.pt"
+#"table1_test5_hdri_arabidopsis_resnet50_epoch15_rotate_True_finetune_3_epoch50.pt"
 # directory_images = "/home/alienor/Documents/database/FINETUNE"
-directory_weights = "/home/twintz/.cache/romiscan"
+directory_weights = "/home/alienor/Documents/training2D/weights/"
+#"/home/twintz/.cache/romiscan"
 finetune_epochs = 20
 
 [Reconstruction3D]
@@ -26,8 +26,10 @@ N_vox = 1000000
 [Voxels]
 upstream_mask = "Segmentation2D"
 multiclass = true
-voxel_size = 2.0
+voxel_size = 0.2
 type = "averaging"
+#upstream_colmap = "None"
+use_colmap_poses='False'
 
 [PointCloud]
 level_set_value = 1.0
@@ -39,12 +41,19 @@ thumbnail_size = 150
 pcd_source = "vox2pcd"
 mesh_source = "delaunay"
 
-[Colmap.cli_args.feature_extractor]
-"--ImageReader.single_camera" = "1"
-"--SiftExtraction.use_gpu" = "1"
+#[Colmap]
+#matcher = "exhaustive"
+#compute_dense = false
 
-[Colmap.cli_args.exhaustive_matcher]
-"--SiftMatching.use_gpu" = "1"
 
-[Colmap.cli_args.model_aligner]
---robust_alignment_max_error = "10"
+#[Colmap.cli_args.feature_extractor]
+#"--ImageReader.single_camera" = "1"
+#"--SiftExtraction.use_gpu" = "1"
+
+#[Colmap.cli_args.exhaustive_matcher]
+#"--SiftMatching.use_gpu" = "1"
+
+#[Colmap.cli_args.model_aligner]
+#--robust_alignment_max_error = "10"
+
+
