--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,52 @@
+aniso8601==8.0.0
 appdirs==1.4.3
+argh==0.26.2
+astropy==4.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
+Bottleneck==1.3.1
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
 cycler==0.10.0
 decorator==4.4.1
 defusedxml==0.6.0
+dill==0.3.1.1
+dirsync==2.2.4
 docutils==0.15.2
 entrypoints==0.3
+fast-histogram==0.7
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-RESTful==0.3.7
+glue-core==0.15.6
+glue-vispy-viewers==0.12.2
+glueviz==0.15.2
+h5py==2.10.0
+idna==2.8
 imageio==2.6.1
 ipykernel==5.1.3
 ipython==7.10.2
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
+itsdangerous==1.1.0
 jedi==0.15.1
 Jinja2==2.10.3
+joblib==0.14.1
 jsonschema==3.2.0
 jupyter-client==5.3.4
 jupyter-core==4.6.1
 kiwisolver==1.1.0
 lettucethink==0.2.dev0
 lockfile==0.12.2
-luigi==2.8.10
+luigi==2.8.11
+lxml==4.4.2
+Mako==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.1.2
 mistune==0.8.4
+mpl-scatter-density==0.6
 nbconvert==5.6.1
 nbformat==4.4.0
 networkx==2.4
@@ -34,8 +54,10 @@ notebook==6.0.2
 numpy==1.17.4
 open3d==0.8.0.0
 opencv-python==4.1.2.30
+pandas==0.25.3
 pandocfilters==1.4.2
 parso==0.5.2
+pathtools==0.1.2
 pexpect==4.7.0
 pickleshare==0.7.5
 Pillow==6.2.1
@@ -44,15 +66,25 @@ prompt-toolkit==3.0.2
 ptyprocess==0.6.0
 pybind11==2.4.3
 Pygments==2.5.2
+pyopencl==2019.1.1
+PyOpenGL==3.1.4
 pyparsing==2.4.5
+PyQt5==5.13.2
+PyQt5-sip==12.7.0
 pyrsistent==0.15.6
 python-daemon==2.1.2
 python-dateutil==2.8.1
+pytools==2019.1.1
+pytz==2019.3
 PyWavelets==1.1.1
+PyYAML==5.2
 pyzmq==18.1.1
-romidata==0.5.dev0
-romiscan==0.5.dev0
+qtconsole==4.6.0
+QtPy==1.9.0
+requests==2.22.0
+romidata==0.5.1.dev1+ge0583ef
 scikit-image==0.16.2
+scikit-learn==0.22
 scipy==1.3.3
 Send2Trash==1.5.0
 six==1.13.0
@@ -62,7 +94,11 @@ toml==0.10.0
 tornado==5.1.1
 tqdm==4.40.2
 traitlets==4.3.3
+treex==1.6.3
+urllib3==1.25.7
+watchdog==0.9.0
 wcwidth==0.1.7
 webencodings==0.5.1
+Werkzeug==0.16.0
 widgetsnbextension==3.5.1
-requests==2.22.0
+xlrd==1.2.0
