--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ nbformat==4.4.0
 networkx==2.4
 notebook==6.0.2
 numpy==1.17.4
-open3d==0.8.0.0
+open3d==0.9.0.0
 opencv-python==4.1.2.30
 pandas==0.25.3
 pandocfilters==1.4.2
@@ -82,7 +82,7 @@ pyzmq==18.1.1
 qtconsole==4.6.0
 QtPy==1.9.0
 requests==2.22.0
-romidata==0.5.1.dev1+ge0583ef
+romidata==0.5.1.dev2+g3302a87
 scikit-image==0.16.2
 scikit-learn==0.22
 scipy==1.3.3
