--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,69 @@
+absl-py==0.9.0
+alabaster==0.7.12
 aniso8601==8.0.0
+apipkg==1.5
 appdirs==1.4.3
+argcomplete==1.10.0
 argh==0.26.2
+asn1crypto==1.2.0
+astor==0.8.0
 astropy==4.0
+atomicwrites==1.3.0
 attrs==19.3.0
+autopep8==1.4.4
+Babel==2.7.0
 backcall==0.1.0
+beautifulsoup4==4.8.2
 bleach==3.1.0
 Bottleneck==1.3.1
+Brlapi==0.7.0
+btrfsutil==1.1.1
+CacheControl==0.12.6
+cachetools==3.1.1
 certifi==2019.11.28
+cffi==1.13.2
+cgal-skel==0.1
 chardet==3.0.4
+chrome-gnome-shell==0.0.0
 Click==7.0
+colorama==0.4.3
+colorlog==4.1.0
+configobj==5.0.6
+contextlib2==0.6.0
+cryptography==2.8
 cycler==0.10.0
+Cython==0.29.14
 decorator==4.4.1
 defusedxml==0.6.0
 dill==0.3.1.1
 dirsync==2.2.4
+distlib==0.3.0
+distro==1.4.0
 docutils==0.15.2
 entrypoints==0.3
+evdev==1.2.0
 fast-histogram==0.7
+feedparser==5.2.1
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-RESTful==0.3.7
+future==0.18.2
+gast==0.2.2
 glue-core==0.15.6
 glue-vispy-viewers==0.12.2
 glueviz==0.15.2
+google-auth==1.7.1
+google-auth-oauthlib==0.4.1
+greenlet==0.4.15
+grpcio==1.26.0
 h5py==2.10.0
+html5lib==1.0.1
+httpie==2.0.0
 idna==2.8
 imageio==2.6.1
+imagesize==1.1.0
+importlib-metadata==0.23
+iniconfig==1.0.0
 ipykernel==5.1.3
 ipython==7.10.2
 ipython-genutils==0.2.0
@@ -34,71 +72,158 @@ itsdangerous==1.1.0
 jedi==0.15.1
 Jinja2==2.10.3
 joblib==0.14.1
+jsonpatch==1.24
+jsonpointer==2.0
 jsonschema==3.2.0
+jupyter==1.0.0
 jupyter-client==5.3.4
+jupyter-console==6.0.0
 jupyter-core==4.6.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
+labelme==3.16.7
+lensfun==0.3.2
 lettucethink==0.2.dev0
+lit==0.9.1.dev0
 lockfile==0.12.2
+louis==3.12.0
 luigi==2.8.11
 lxml==4.4.2
 Mako==1.1.0
+Markdown==3.1.1
 MarkupSafe==1.1.1
 matplotlib==3.1.2
+meshio==3.2.15
+meson==0.53.0
 mistune==0.8.4
+more-itertools==8.0.2
 mpl-scatter-density==0.6
+msgpack==0.6.2
+munch==2.5.0
 nbconvert==5.6.1
 nbformat==4.4.0
 networkx==2.4
+nftables==0.1
+nose==1.3.7
 notebook==6.0.2
 numpy==1.17.4
+oauthlib==3.1.0
+olefile==0.46
 open3d==0.9.0.0
 opencv-python==4.1.2.30
+opt-einsum==3.1.0
+ordered-set==3.1.1
+packaging==19.2
 pandas==0.25.3
 pandocfilters==1.4.2
 parso==0.5.2
 pathtools==0.1.2
+pep517==0.6.0
 pexpect==4.7.0
 pickleshare==0.7.5
 Pillow==6.2.1
+pluggy==0.13.1
+ply==3.11
+plyfile==0.7.1
+pretrainedmodels==0.7.4
+progress==1.5
 prometheus-client==0.7.1
 prompt-toolkit==3.0.2
+protobuf==3.11.1
 ptyprocess==0.6.0
+pwquality==1.4.2
+py==1.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pybind11==2.4.3
+pycairo==1.18.2
+pycodestyle==2.5.0
+pycparser==2.19
+pycuda==2019.1.2
 Pygments==2.5.2
+PyGObject==3.34.0
+pymesh==1.0.2
+pyntcloud==0.1.2
+pynvim==0.4.0
 pyopencl==2019.1.1
 PyOpenGL==3.1.4
 pyparsing==2.4.5
-PyQt5==5.13.2
+PyQt5==5.14.1
 PyQt5-sip==12.7.0
 pyrsistent==0.15.6
+pytest==5.3.2
 python-daemon==2.1.2
 python-dateutil==2.8.1
+pytoml==0.1.21
 pytools==2019.1.1
 pytz==2019.3
+pyudev==0.21.0.dev20191102
 PyWavelets==1.1.1
+pyxdg==0.26
 PyYAML==5.2
 pyzmq==18.1.1
 qtconsole==4.6.0
 QtPy==1.9.0
 requests==2.22.0
-romidata==0.5.1.dev2+g3302a87
+requests-oauthlib==1.3.0
+retrying==1.3.3
+romidata==0.5.1.dev2+g3302a87.d20200114
+romiseg==0.0.1
+rsa==4.0
 scikit-image==0.16.2
 scikit-learn==0.22
 scipy==1.3.3
+scons==3.1.2
+segmentation-models-pytorch==0.0.1
 Send2Trash==1.5.0
+sip==4.19.20
 six==1.13.0
+slip==0.6.5
+slip.dbus==0.6.5
+snowballstemmer==2.0.0
+soupsieve==1.9.5
+Sphinx==2.2.2
+sphinx-rtd-theme==0.4.3
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+sphinxcontrib-websupport==1.1.2
+SQLAlchemy==1.3.12
+team==1.0
+tensorboard==2.1.0
+tensorflow-estimator==2.1.0
+tensorflow-gpu==2.1.0
+tensorflow-serving-api==2.0.0
+tensorflow-serving-api-gpu==2.0.0
+termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
 toml==0.10.0
+torch==1.3.1
+torchfile==0.1.0
+torchnet==0.0.4
+torchvision==0.2.2.post3
 tornado==5.1.1
 tqdm==4.40.2
 traitlets==4.3.3
 treex==1.6.3
+typed-ast==1.4.0
 urllib3==1.25.7
+virtualenv==16.1.0
+visdom==0.1.8.9
 watchdog==0.9.0
 wcwidth==0.1.7
 webencodings==0.5.1
+websocket-client==0.56.0
 Werkzeug==0.16.0
+Whoosh==2.7.4
 widgetsnbextension==3.5.1
+wrapt==1.11.2
+wxPython==4.0.7.post2
 xlrd==1.2.0
+youtube-dl==2020.1.1
+zipp==0.6.0
