adjust metadata colletion

--- a/default/segmentation2d_arabidopsis.toml
+++ b/default/segmentation2d_arabidopsis.toml
@@ -14,16 +14,18 @@ threshold = 0.0
 path = "/home/alienor/Documents/training2D/" #replace by path to your database
 directory_weights = "weights/"
 tsboard = "board/"
-directory_dataset = "data/dataset_stem_green/"
+directory_dataset = "data/blabla/"
 
 [Segmentation2D]
 upstream_task = "ImagesFilesetExists"
 query = "{\"channel\":\"rgb\"}"
+
+
 model_id = "Resnet101dataset_final_896_896_epoch50"
-#directory_weights = "/home/alienor/Documents/training2D/weights/"
+
 Sx = 896
 Sy = 896
-epochs = 5
+epochs = 1
 batch = 1
 learning_rate = 0.0001
 
