--- a/config/ml_pipe_vplants_1.toml
+++ b/config/ml_pipe_vplants_1.toml
@@ -36,10 +36,12 @@ multiclass = true
 voxel_size = 0.1
 type = "averaging"
 use_colmap_poses = false
-log =true
+log = true
+non_background_fn_rate = 0.1
 
 [PointCloud]
 level_set_value = 0.5
+min_score = 0.01
 
 [PointCloudGroundTruth]
 pcd_size = 10000
