Fix `original_pipe_0.toml` to work as reference geometric pipeline
Next command is ok:
romi_run_task --config Scan3D/config/original_pipe_0.toml AnglesAndInternodes integration_tests/2019-02-01_10-56-33 --local-scheduler

`integration_tests` comes from: https://db.romi-project.eu/models/test_db.tar.gz

--- a/config/original_pipe_0.toml
+++ b/config/original_pipe_0.toml
@@ -20,6 +20,7 @@ scan_id = "models"
 
 [Masks]
 upstream_task = "ImagesFilesetExists"
+#upstream_task = "Undistorted"  # other option
 type = "linear"
 parameters = "[0,1,0]"
 dilation = 5
@@ -37,6 +38,9 @@ log = false
 [PointCloud]
 level_set_value = 1.0
 background_prior= -200
+
+[AnglesAndInternodes]
+upstream_task = "TreeGraph"
 
 [PointCloudGroundTruth]
 pcd_size = 10000
