--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "romiscanner"]
 	path = romiscanner
 	url = https://github.com/romi/romiscanner.git
+[submodule "romicgal"]
+	path = romicgal
+	url = https://github.com/romi/romicgal.git
