Modifying the Dockerfile following integration of many submodules in romiscan

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -44,27 +44,11 @@ USER ${USER_NAME}
 ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES compute,utility
 
-RUN git clone https://github.com/romi/romidata.git && \
-    cd romidata/ && \
-    git checkout dev && \
-    python -m pip install .
-
-RUN git clone https://github.com/romi/cgal_bindings_skeletonization && \
-    cd cgal_bindings_skeletonization/ && \
-    python -m pip install .
-
-RUN git clone https://github.com/romi/romiseg && \
-    cd romiseg/ && \
-    git checkout dev && \
-    python -m pip install .
-
-RUN git clone https://github.com/romi/romiscanner.git && \
-    cd romiscanner/ && \
-    python -m pip install .
-
 RUN git clone https://github.com/romi/romiscan && \
     cd romiscan/ && \
     git checkout dev && \
+	git submodule init && \
+	git submodule update && \
     python -m pip install -r requirements.txt && \
     python -m pip install .
 
