--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         runs-on: self-hosted
 
         steps:
-         - uses: action/checkout@v2
+         - uses: actions/checkout@v2
          - name: Build Dockerfile
            run: |
             docker build -t romiscan:latest docker/Dockerfile
