--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
          - uses: actions/checkout@v2
          - name: Build Dockerfile
            run: |
-            docker build -t romiscan:latest docker/Dockerfile
+            docker build -t romiscan:latest -f docker/Dockerfile
     
     unit-tests:
         runs-on: self-hosted
