--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,11 +2,7 @@
 
 name: CI
 
-on:
-    push:
-        branches: [dev]
-    pull_request:
-        branches: [dev]
+on: push
 
 jobs:
     docker-build:
@@ -17,7 +13,7 @@ jobs:
          - name: Build Dockerfile
            run: |
             cd docker/
-            docker build --no-cache -t romiscan:${{ github.head_ref }} --build-arg USER_NAME=$(id -n -u) --build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g) --build-arg ROMISCAN_BRANCH=${{ github.head_ref }} .
+            docker build --no-cache -t romiscan:${GITHUB_REF##*/} --build-arg USER_NAME=$(id -n -u) --build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g) --build-arg ROMISCAN_BRANCH=${GITHUB_REF##*/} .
     
 #    unit-tests:
 #        runs-on: self-hosted
@@ -26,7 +22,7 @@ jobs:
 #        steps:
 #         - name: Run Unit Tests
 #           run: |
-#            docker run --gpus all --env PYOPENCL_CTX='0' --rm romiscan:latest cd romiscan/tests/ && python -m unittest
+#            docker run --gpus all --env PYOPENCL_CTX='0' --rm romiscan:${GITHUB_REF##*/} /bin/sh -c 'cd romiscan/tests/; python -m unittest'
 
     feature-tests:
        runs-on: self-hosted
@@ -35,4 +31,4 @@ jobs:
        steps:
         - name: Run Feature Tests
           run: |
-           docker run -v /home/${USER}/ML_models:/home/${USER}/romiscan/tests/testdata/models/models --gpus all --env PYOPENCL_CTX='0' --rm romiscan:${{ github.head_ref }} /bin/sh -c 'cd romiscan/tests/; ./check_pipe.sh'
+           docker run -v /home/${USER}/ML_models:/home/${USER}/romiscan/tests/testdata/models/models --gpus all --env PYOPENCL_CTX='0' --rm romiscan:${GITHUB_REF##*/} /bin/sh -c 'cd romiscan/tests/; ./check_pipe.sh'
