No need to kill conatiner, it is killed when job ends

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -38,8 +38,7 @@ jobs:
        needs: feature-tests
         
        steps:
-        - name: Kill container et remove image
+        - name: Remove Docker Image
           if: always()
           run: |
-            docker kill romiscan:${{ github.sha }}
             docker image rm romiscan:${{ github.sha }}
