--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,14 +15,14 @@ jobs:
             cd docker/
             docker build --no-cache -t romiscan:${{ github.sha }} --build-arg USER_NAME=$(id -n -u) --build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g) --build-arg ROMISCAN_BRANCH=${{ github.head_ref }} .
     
-#    unit-tests:
-#        runs-on: self-hosted
-#        needs: docker-build
+    unit-tests:
+        runs-on: self-hosted
+        needs: docker-build
         
-#        steps:
-#         - name: Run Unit Tests
-#           run: |
-#            docker run --gpus all --env PYOPENCL_CTX='0' --rm romiscan:${{ github.sha }} /bin/sh -c 'cd romiscan/tests/; python -m unittest'
+        steps:
+         - name: Run Unit Tests
+           run: |
+            docker run --gpus all --env PYOPENCL_CTX='0' --rm romiscan:${{ github.sha }} /bin/sh -c 'cd romiscan/tests/; python -m unittest'
 
     feature-tests:
        runs-on: self-hosted
