--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,14 +19,14 @@ jobs:
             cd docker/
             docker build --no-cache -t romiscan:${GITHUB_REF##*/} --build-arg USER_NAME=$(id -n -u) --build-arg USER_ID=$(id -u) --build-arg GROUP_ID=$(id -g) --build-arg ROMISCAN_BRANCH=${GITHUB_REF##*/} .
     
-#    unit-tests:
-#        runs-on: self-hosted
-#        needs: docker-build
+    unit-tests:
+        runs-on: self-hosted
+        needs: docker-build
         
-#        steps:
-#         - name: Run Unit Tests
-#           run: |
-#            docker run --gpus all --env PYOPENCL_CTX='0' --rm romiscan:${GITHUB_REF##*/} /bin/sh -c 'cd romiscan/tests/; python -m unittest'
+        steps:
+         - name: Run Unit Tests
+           run: |
+            docker run --gpus all --env PYOPENCL_CTX='0' --rm romiscan:${GITHUB_REF##*/} /bin/sh -c 'cd romiscan/tests/; python -m unittest'
 
     feature-tests:
        runs-on: self-hosted
