Make sure cleaning happen after all tests

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -35,7 +35,7 @@ jobs:
 
     docker-clean:
        runs-on: self-hosted
-       needs: feature-tests
+       needs: [feature-tests, unit-tests]
         
        steps:
         - name: Remove Docker Image
