--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -1,9 +1,9 @@
 FROM geki/colmap
 # geki/colmap is based on nvidia/cuda:10.1-devel-ubuntu18.04
 
-ARG USER_NAME
-ARG USER_ID
-ARG GROUP_ID
+ARG USER_NAME=romi
+ARG USER_ID=1000
+ARG GROUP_ID=1000
 ARG ROMISCAN_BRANCH=dev
 
 USER root
@@ -18,25 +18,13 @@ RUN apt-get update && apt-get install -y \
     # Create a non-root user and give it rights over its "home folder"
     addgroup --gid $GROUP_ID $USER_NAME && \
     adduser --disabled-password --gecos '' --uid $USER_ID --gid $GROUP_ID $USER_NAME && \
-    chown -R ${USER_NAME}: /home/${USER_NAME}
-
-# Change to non-root user:
-USER ${USER_NAME}
-# Change working directory:
-WORKDIR /home/${USER_NAME}
-
-RUN git clone https://github.com/inducer/pyopencl && \
-    cd pyopencl/ && \
-    git submodule update --init && \
-    python -m pip install pybind11 --no-cache-dir && \
-    ./configure.py --cl-pretend-version=1.2 && \
-    python -m pip install . --no-cache-dir
-
-USER root
-RUN mkdir -p /etc/OpenCL/vendors && \
+    chown -R ${USER_NAME}: /home/${USER_NAME} && \
+    mkdir -p /etc/OpenCL/vendors && \
     echo "libnvidia-opencl.so.1" > /etc/OpenCL/vendors/nvidia.icd
 
 USER ${USER_NAME}
+WORKDIR /home/${USER_NAME}
+
 # nvidia-container-runtime
 ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES compute,utility
@@ -46,13 +34,12 @@ RUN git clone https://github.com/romi/romiscan && \
     git checkout $ROMISCAN_BRANCH && \
     git submodule init && \
     git submodule update && \
-    python -m pip install -e ./romiseg/ && \
-    python -m pip install -e ./romicgal/ && \
-    python -m pip install -e ./romidata/ && \
-    python -m pip install -e ./romiscanner/ && \
-    python -m pip install -r requirements.txt && \
-    python -m pip install . && \
-    python -m pip cache purge
+    python -m pip install -e ./romiseg/ --no-cache-dir && \
+    python -m pip install -e ./romicgal/ --no-cache-dir && \
+    python -m pip install -e ./romidata/ --no-cache-dir && \
+    python -m pip install -e ./romiscanner/ --no-cache-dir && \
+    python -m pip install -r requirements.txt --no-cache-dir && \
+    python -m pip install -e . --no-cache-dir
 
 ENV DB_LOCATION="/home/${USER_NAME}/db_test"
 ENV PATH=$PATH:"/home/${USER_NAME}/.local/bin"
